src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SEMICOLON

Grammar

Rule 0     S' -> statement
Rule 1     statement -> VAR IDENTIFIER ASSIGN expression NEWLINE
Rule 2     statement -> VAR IDENTIFIER ASSIGN expression
Rule 3     statement -> expression NEWLINE
Rule 4     statement -> NEWLINE
Rule 5     statement -> expression
Rule 6     expression -> expression PLUS term
Rule 7     expression -> expression MINUS term
Rule 8     expression -> term
Rule 9     expression -> BOOL
Rule 10    expression -> NOT expression
Rule 11    expression -> expression AND expression
Rule 12    expression -> expression OR expression
Rule 13    expression -> expression EQT expression
Rule 14    expression -> expression NEQ expression
Rule 15    expression -> expression LT expression
Rule 16    expression -> expression GT expression
Rule 17    expression -> expression ELT expression
Rule 18    expression -> expression EGT expression
Rule 19    term -> term TIMES factor
Rule 20    term -> term DIVIDE factor
Rule 21    term -> factor
Rule 22    factor -> factor POWER factor
Rule 23    factor -> INT
Rule 24    factor -> FLOAT
Rule 25    factor -> MINUS INT
Rule 26    factor -> MINUS FLOAT
Rule 27    factor -> IDENTIFIER
Rule 28    factor -> NEWLINE IDENTIFIER
Rule 29    factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

AND                  : 11
ASSIGN               : 1 2
BOOL                 : 9
DIVIDE               : 20
EGT                  : 18
ELT                  : 17
EQT                  : 13
FLOAT                : 24 26
GT                   : 16
IDENTIFIER           : 1 2 27 28
INT                  : 23 25
LPAREN               : 29
LT                   : 15
MINUS                : 7 25 26
NEQ                  : 14
NEWLINE              : 1 3 4 28
NOT                  : 10
OR                   : 12
PLUS                 : 6
POWER                : 22
RPAREN               : 29
SEMICOLON            : 
TIMES                : 19
VAR                  : 1 2
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 3 5 6 7 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 29
factor               : 19 20 21 22 22
statement            : 0
term                 : 6 7 8 19 20

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . VAR IDENTIFIER ASSIGN expression NEWLINE
    (2) statement -> . VAR IDENTIFIER ASSIGN expression
    (3) statement -> . expression NEWLINE
    (4) statement -> . NEWLINE
    (5) statement -> . expression
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term
    (9) expression -> . BOOL
    (10) expression -> . NOT expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQT expression
    (14) expression -> . expression NEQ expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression ELT expression
    (18) expression -> . expression EGT expression
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . factor POWER factor
    (23) factor -> . INT
    (24) factor -> . FLOAT
    (25) factor -> . MINUS INT
    (26) factor -> . MINUS FLOAT
    (27) factor -> . IDENTIFIER
    (28) factor -> . NEWLINE IDENTIFIER
    (29) factor -> . LPAREN expression RPAREN

    VAR             shift and go to state 2
    NEWLINE         shift and go to state 5
    BOOL            shift and go to state 8
    NOT             shift and go to state 9
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 7
    IDENTIFIER      shift and go to state 3
    LPAREN          shift and go to state 13

    statement                      shift and go to state 1
    expression                     shift and go to state 4
    term                           shift and go to state 6
    factor                         shift and go to state 10

state 1

    (0) S' -> statement .



state 2

    (1) statement -> VAR . IDENTIFIER ASSIGN expression NEWLINE
    (2) statement -> VAR . IDENTIFIER ASSIGN expression

    IDENTIFIER      shift and go to state 14


state 3

    (27) factor -> IDENTIFIER .

    POWER           reduce using rule 27 (factor -> IDENTIFIER .)
    TIMES           reduce using rule 27 (factor -> IDENTIFIER .)
    DIVIDE          reduce using rule 27 (factor -> IDENTIFIER .)
    NEWLINE         reduce using rule 27 (factor -> IDENTIFIER .)
    PLUS            reduce using rule 27 (factor -> IDENTIFIER .)
    MINUS           reduce using rule 27 (factor -> IDENTIFIER .)
    AND             reduce using rule 27 (factor -> IDENTIFIER .)
    OR              reduce using rule 27 (factor -> IDENTIFIER .)
    EQT             reduce using rule 27 (factor -> IDENTIFIER .)
    NEQ             reduce using rule 27 (factor -> IDENTIFIER .)
    LT              reduce using rule 27 (factor -> IDENTIFIER .)
    GT              reduce using rule 27 (factor -> IDENTIFIER .)
    ELT             reduce using rule 27 (factor -> IDENTIFIER .)
    EGT             reduce using rule 27 (factor -> IDENTIFIER .)
    $end            reduce using rule 27 (factor -> IDENTIFIER .)
    RPAREN          reduce using rule 27 (factor -> IDENTIFIER .)


state 4

    (3) statement -> expression . NEWLINE
    (5) statement -> expression .
    (6) expression -> expression . PLUS term
    (7) expression -> expression . MINUS term
    (11) expression -> expression . AND expression
    (12) expression -> expression . OR expression
    (13) expression -> expression . EQT expression
    (14) expression -> expression . NEQ expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GT expression
    (17) expression -> expression . ELT expression
    (18) expression -> expression . EGT expression

    NEWLINE         shift and go to state 15
    $end            reduce using rule 5 (statement -> expression .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    AND             shift and go to state 18
    OR              shift and go to state 19
    EQT             shift and go to state 20
    NEQ             shift and go to state 21
    LT              shift and go to state 22
    GT              shift and go to state 23
    ELT             shift and go to state 24
    EGT             shift and go to state 25


state 5

    (4) statement -> NEWLINE .
    (28) factor -> NEWLINE . IDENTIFIER

    $end            reduce using rule 4 (statement -> NEWLINE .)
    IDENTIFIER      shift and go to state 26


state 6

    (8) expression -> term .
    (19) term -> term . TIMES factor
    (20) term -> term . DIVIDE factor

    NEWLINE         reduce using rule 8 (expression -> term .)
    PLUS            reduce using rule 8 (expression -> term .)
    MINUS           reduce using rule 8 (expression -> term .)
    AND             reduce using rule 8 (expression -> term .)
    OR              reduce using rule 8 (expression -> term .)
    EQT             reduce using rule 8 (expression -> term .)
    NEQ             reduce using rule 8 (expression -> term .)
    LT              reduce using rule 8 (expression -> term .)
    GT              reduce using rule 8 (expression -> term .)
    ELT             reduce using rule 8 (expression -> term .)
    EGT             reduce using rule 8 (expression -> term .)
    $end            reduce using rule 8 (expression -> term .)
    RPAREN          reduce using rule 8 (expression -> term .)
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 28


state 7

    (25) factor -> MINUS . INT
    (26) factor -> MINUS . FLOAT

    INT             shift and go to state 29
    FLOAT           shift and go to state 30


state 8

    (9) expression -> BOOL .

    NEWLINE         reduce using rule 9 (expression -> BOOL .)
    PLUS            reduce using rule 9 (expression -> BOOL .)
    MINUS           reduce using rule 9 (expression -> BOOL .)
    AND             reduce using rule 9 (expression -> BOOL .)
    OR              reduce using rule 9 (expression -> BOOL .)
    EQT             reduce using rule 9 (expression -> BOOL .)
    NEQ             reduce using rule 9 (expression -> BOOL .)
    LT              reduce using rule 9 (expression -> BOOL .)
    GT              reduce using rule 9 (expression -> BOOL .)
    ELT             reduce using rule 9 (expression -> BOOL .)
    EGT             reduce using rule 9 (expression -> BOOL .)
    $end            reduce using rule 9 (expression -> BOOL .)
    RPAREN          reduce using rule 9 (expression -> BOOL .)


state 9

    (10) expression -> NOT . expression
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term
    (9) expression -> . BOOL
    (10) expression -> . NOT expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQT expression
    (14) expression -> . expression NEQ expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression ELT expression
    (18) expression -> . expression EGT expression
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . factor POWER factor
    (23) factor -> . INT
    (24) factor -> . FLOAT
    (25) factor -> . MINUS INT
    (26) factor -> . MINUS FLOAT
    (27) factor -> . IDENTIFIER
    (28) factor -> . NEWLINE IDENTIFIER
    (29) factor -> . LPAREN expression RPAREN

    BOOL            shift and go to state 8
    NOT             shift and go to state 9
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 7
    IDENTIFIER      shift and go to state 3
    NEWLINE         shift and go to state 32
    LPAREN          shift and go to state 13

    expression                     shift and go to state 31
    term                           shift and go to state 6
    factor                         shift and go to state 10

state 10

    (21) term -> factor .
    (22) factor -> factor . POWER factor

    TIMES           reduce using rule 21 (term -> factor .)
    DIVIDE          reduce using rule 21 (term -> factor .)
    NEWLINE         reduce using rule 21 (term -> factor .)
    PLUS            reduce using rule 21 (term -> factor .)
    MINUS           reduce using rule 21 (term -> factor .)
    AND             reduce using rule 21 (term -> factor .)
    OR              reduce using rule 21 (term -> factor .)
    EQT             reduce using rule 21 (term -> factor .)
    NEQ             reduce using rule 21 (term -> factor .)
    LT              reduce using rule 21 (term -> factor .)
    GT              reduce using rule 21 (term -> factor .)
    ELT             reduce using rule 21 (term -> factor .)
    EGT             reduce using rule 21 (term -> factor .)
    $end            reduce using rule 21 (term -> factor .)
    RPAREN          reduce using rule 21 (term -> factor .)
    POWER           shift and go to state 33


state 11

    (23) factor -> INT .

    POWER           reduce using rule 23 (factor -> INT .)
    TIMES           reduce using rule 23 (factor -> INT .)
    DIVIDE          reduce using rule 23 (factor -> INT .)
    NEWLINE         reduce using rule 23 (factor -> INT .)
    PLUS            reduce using rule 23 (factor -> INT .)
    MINUS           reduce using rule 23 (factor -> INT .)
    AND             reduce using rule 23 (factor -> INT .)
    OR              reduce using rule 23 (factor -> INT .)
    EQT             reduce using rule 23 (factor -> INT .)
    NEQ             reduce using rule 23 (factor -> INT .)
    LT              reduce using rule 23 (factor -> INT .)
    GT              reduce using rule 23 (factor -> INT .)
    ELT             reduce using rule 23 (factor -> INT .)
    EGT             reduce using rule 23 (factor -> INT .)
    $end            reduce using rule 23 (factor -> INT .)
    RPAREN          reduce using rule 23 (factor -> INT .)


state 12

    (24) factor -> FLOAT .

    POWER           reduce using rule 24 (factor -> FLOAT .)
    TIMES           reduce using rule 24 (factor -> FLOAT .)
    DIVIDE          reduce using rule 24 (factor -> FLOAT .)
    NEWLINE         reduce using rule 24 (factor -> FLOAT .)
    PLUS            reduce using rule 24 (factor -> FLOAT .)
    MINUS           reduce using rule 24 (factor -> FLOAT .)
    AND             reduce using rule 24 (factor -> FLOAT .)
    OR              reduce using rule 24 (factor -> FLOAT .)
    EQT             reduce using rule 24 (factor -> FLOAT .)
    NEQ             reduce using rule 24 (factor -> FLOAT .)
    LT              reduce using rule 24 (factor -> FLOAT .)
    GT              reduce using rule 24 (factor -> FLOAT .)
    ELT             reduce using rule 24 (factor -> FLOAT .)
    EGT             reduce using rule 24 (factor -> FLOAT .)
    $end            reduce using rule 24 (factor -> FLOAT .)
    RPAREN          reduce using rule 24 (factor -> FLOAT .)


state 13

    (29) factor -> LPAREN . expression RPAREN
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term
    (9) expression -> . BOOL
    (10) expression -> . NOT expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQT expression
    (14) expression -> . expression NEQ expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression ELT expression
    (18) expression -> . expression EGT expression
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . factor POWER factor
    (23) factor -> . INT
    (24) factor -> . FLOAT
    (25) factor -> . MINUS INT
    (26) factor -> . MINUS FLOAT
    (27) factor -> . IDENTIFIER
    (28) factor -> . NEWLINE IDENTIFIER
    (29) factor -> . LPAREN expression RPAREN

    BOOL            shift and go to state 8
    NOT             shift and go to state 9
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 7
    IDENTIFIER      shift and go to state 3
    NEWLINE         shift and go to state 32
    LPAREN          shift and go to state 13

    expression                     shift and go to state 34
    term                           shift and go to state 6
    factor                         shift and go to state 10

state 14

    (1) statement -> VAR IDENTIFIER . ASSIGN expression NEWLINE
    (2) statement -> VAR IDENTIFIER . ASSIGN expression

    ASSIGN          shift and go to state 35


state 15

    (3) statement -> expression NEWLINE .

    $end            reduce using rule 3 (statement -> expression NEWLINE .)


state 16

    (6) expression -> expression PLUS . term
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . factor POWER factor
    (23) factor -> . INT
    (24) factor -> . FLOAT
    (25) factor -> . MINUS INT
    (26) factor -> . MINUS FLOAT
    (27) factor -> . IDENTIFIER
    (28) factor -> . NEWLINE IDENTIFIER
    (29) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 7
    IDENTIFIER      shift and go to state 3
    NEWLINE         shift and go to state 32
    LPAREN          shift and go to state 13

    term                           shift and go to state 36
    factor                         shift and go to state 10

state 17

    (7) expression -> expression MINUS . term
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . factor POWER factor
    (23) factor -> . INT
    (24) factor -> . FLOAT
    (25) factor -> . MINUS INT
    (26) factor -> . MINUS FLOAT
    (27) factor -> . IDENTIFIER
    (28) factor -> . NEWLINE IDENTIFIER
    (29) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 7
    IDENTIFIER      shift and go to state 3
    NEWLINE         shift and go to state 32
    LPAREN          shift and go to state 13

    term                           shift and go to state 37
    factor                         shift and go to state 10

state 18

    (11) expression -> expression AND . expression
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term
    (9) expression -> . BOOL
    (10) expression -> . NOT expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQT expression
    (14) expression -> . expression NEQ expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression ELT expression
    (18) expression -> . expression EGT expression
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . factor POWER factor
    (23) factor -> . INT
    (24) factor -> . FLOAT
    (25) factor -> . MINUS INT
    (26) factor -> . MINUS FLOAT
    (27) factor -> . IDENTIFIER
    (28) factor -> . NEWLINE IDENTIFIER
    (29) factor -> . LPAREN expression RPAREN

    BOOL            shift and go to state 8
    NOT             shift and go to state 9
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 7
    IDENTIFIER      shift and go to state 3
    NEWLINE         shift and go to state 32
    LPAREN          shift and go to state 13

    expression                     shift and go to state 38
    term                           shift and go to state 6
    factor                         shift and go to state 10

state 19

    (12) expression -> expression OR . expression
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term
    (9) expression -> . BOOL
    (10) expression -> . NOT expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQT expression
    (14) expression -> . expression NEQ expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression ELT expression
    (18) expression -> . expression EGT expression
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . factor POWER factor
    (23) factor -> . INT
    (24) factor -> . FLOAT
    (25) factor -> . MINUS INT
    (26) factor -> . MINUS FLOAT
    (27) factor -> . IDENTIFIER
    (28) factor -> . NEWLINE IDENTIFIER
    (29) factor -> . LPAREN expression RPAREN

    BOOL            shift and go to state 8
    NOT             shift and go to state 9
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 7
    IDENTIFIER      shift and go to state 3
    NEWLINE         shift and go to state 32
    LPAREN          shift and go to state 13

    expression                     shift and go to state 39
    term                           shift and go to state 6
    factor                         shift and go to state 10

state 20

    (13) expression -> expression EQT . expression
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term
    (9) expression -> . BOOL
    (10) expression -> . NOT expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQT expression
    (14) expression -> . expression NEQ expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression ELT expression
    (18) expression -> . expression EGT expression
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . factor POWER factor
    (23) factor -> . INT
    (24) factor -> . FLOAT
    (25) factor -> . MINUS INT
    (26) factor -> . MINUS FLOAT
    (27) factor -> . IDENTIFIER
    (28) factor -> . NEWLINE IDENTIFIER
    (29) factor -> . LPAREN expression RPAREN

    BOOL            shift and go to state 8
    NOT             shift and go to state 9
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 7
    IDENTIFIER      shift and go to state 3
    NEWLINE         shift and go to state 32
    LPAREN          shift and go to state 13

    expression                     shift and go to state 40
    term                           shift and go to state 6
    factor                         shift and go to state 10

state 21

    (14) expression -> expression NEQ . expression
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term
    (9) expression -> . BOOL
    (10) expression -> . NOT expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQT expression
    (14) expression -> . expression NEQ expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression ELT expression
    (18) expression -> . expression EGT expression
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . factor POWER factor
    (23) factor -> . INT
    (24) factor -> . FLOAT
    (25) factor -> . MINUS INT
    (26) factor -> . MINUS FLOAT
    (27) factor -> . IDENTIFIER
    (28) factor -> . NEWLINE IDENTIFIER
    (29) factor -> . LPAREN expression RPAREN

    BOOL            shift and go to state 8
    NOT             shift and go to state 9
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 7
    IDENTIFIER      shift and go to state 3
    NEWLINE         shift and go to state 32
    LPAREN          shift and go to state 13

    expression                     shift and go to state 41
    term                           shift and go to state 6
    factor                         shift and go to state 10

state 22

    (15) expression -> expression LT . expression
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term
    (9) expression -> . BOOL
    (10) expression -> . NOT expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQT expression
    (14) expression -> . expression NEQ expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression ELT expression
    (18) expression -> . expression EGT expression
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . factor POWER factor
    (23) factor -> . INT
    (24) factor -> . FLOAT
    (25) factor -> . MINUS INT
    (26) factor -> . MINUS FLOAT
    (27) factor -> . IDENTIFIER
    (28) factor -> . NEWLINE IDENTIFIER
    (29) factor -> . LPAREN expression RPAREN

    BOOL            shift and go to state 8
    NOT             shift and go to state 9
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 7
    IDENTIFIER      shift and go to state 3
    NEWLINE         shift and go to state 32
    LPAREN          shift and go to state 13

    expression                     shift and go to state 42
    term                           shift and go to state 6
    factor                         shift and go to state 10

state 23

    (16) expression -> expression GT . expression
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term
    (9) expression -> . BOOL
    (10) expression -> . NOT expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQT expression
    (14) expression -> . expression NEQ expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression ELT expression
    (18) expression -> . expression EGT expression
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . factor POWER factor
    (23) factor -> . INT
    (24) factor -> . FLOAT
    (25) factor -> . MINUS INT
    (26) factor -> . MINUS FLOAT
    (27) factor -> . IDENTIFIER
    (28) factor -> . NEWLINE IDENTIFIER
    (29) factor -> . LPAREN expression RPAREN

    BOOL            shift and go to state 8
    NOT             shift and go to state 9
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 7
    IDENTIFIER      shift and go to state 3
    NEWLINE         shift and go to state 32
    LPAREN          shift and go to state 13

    expression                     shift and go to state 43
    term                           shift and go to state 6
    factor                         shift and go to state 10

state 24

    (17) expression -> expression ELT . expression
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term
    (9) expression -> . BOOL
    (10) expression -> . NOT expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQT expression
    (14) expression -> . expression NEQ expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression ELT expression
    (18) expression -> . expression EGT expression
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . factor POWER factor
    (23) factor -> . INT
    (24) factor -> . FLOAT
    (25) factor -> . MINUS INT
    (26) factor -> . MINUS FLOAT
    (27) factor -> . IDENTIFIER
    (28) factor -> . NEWLINE IDENTIFIER
    (29) factor -> . LPAREN expression RPAREN

    BOOL            shift and go to state 8
    NOT             shift and go to state 9
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 7
    IDENTIFIER      shift and go to state 3
    NEWLINE         shift and go to state 32
    LPAREN          shift and go to state 13

    expression                     shift and go to state 44
    term                           shift and go to state 6
    factor                         shift and go to state 10

state 25

    (18) expression -> expression EGT . expression
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term
    (9) expression -> . BOOL
    (10) expression -> . NOT expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression EQT expression
    (14) expression -> . expression NEQ expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression ELT expression
    (18) expression -> . expression EGT expression
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . factor POWER factor
    (23) factor -> . INT
    (24) factor -> . FLOAT
    (25) factor -> . MINUS INT
    (26) factor -> . MINUS FLOAT
    (27) factor -> . IDENTIFIER
    (28) factor -> . NEWLINE IDENTIFIER
    (29) factor -> . LPAREN expression RPAREN

    BOOL            shift and go to state 8
    NOT             shift and go to state 9
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 7
    IDENTIFIER      shift and go to state 3
    NEWLINE         shift and go to state 32
    LPAREN          shift and go to state 13

    expression                     shift and go to state 45
    term                           shift and go to state 6
    factor                         shift and go to state 10

state 26

    (28) factor -> NEWLINE IDENTIFIER .

    POWER           reduce using rule 28 (factor -> NEWLINE IDENTIFIER .)
    TIMES           reduce using rule 28 (factor -> NEWLINE IDENTIFIER .)
    DIVIDE          reduce using rule 28 (factor -> NEWLINE IDENTIFIER .)
    NEWLINE         reduce using rule 28 (factor -> NEWLINE IDENTIFIER .)
    PLUS            reduce using rule 28 (factor -> NEWLINE IDENTIFIER .)
    MINUS           reduce using rule 28 (factor -> NEWLINE IDENTIFIER .)
    AND             reduce using rule 28 (factor -> NEWLINE IDENTIFIER .)
    OR              reduce using rule 28 (factor -> NEWLINE IDENTIFIER .)
    EQT             reduce using rule 28 (factor -> NEWLINE IDENTIFIER .)
    NEQ             reduce using rule 28 (factor -> NEWLINE IDENTIFIER .)
    LT              reduce using rule 28 (factor -> NEWLINE IDENTIFIER .)
    GT              reduce using rule 28 (factor -> NEWLINE IDENTIFIER .)
    ELT             reduce using rule 28 (factor -> NEWLINE IDENTIFIER .)
    EGT             reduce using rule 28 (factor -> NEWLINE IDENTIFIER .)
    $end            reduce using rule 28 (factor -> NEWLINE IDENTIFIER .)
    RPAREN          reduce using rule 28 (factor -> NEWLINE IDENTIFIER .)


state 27

    (19) term -> term TIMES . factor
    (22) factor -> . factor POWER factor
    (23) factor -> . INT
    (24) factor -> . FLOAT
    (25) factor -> . MINUS INT
    (26) factor -> . MINUS FLOAT
    (27) factor -> . IDENTIFIER
    (28) factor -> . NEWLINE IDENTIFIER
    (29) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 7
    IDENTIFIER      shift and go to state 3
    NEWLINE         shift and go to state 32
    LPAREN          shift and go to state 13

    factor                         shift and go to state 46

state 28

    (20) term -> term DIVIDE . factor
    (22) factor -> . factor POWER factor
    (23) factor -> . INT
    (24) factor -> . FLOAT
    (25) factor -> . MINUS INT
    (26) factor -> . MINUS FLOAT
    (27) factor -> . IDENTIFIER
    (28) factor -> . NEWLINE IDENTIFIER
    (29) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 7
    IDENTIFIER      shift and go to state 3
    NEWLINE         shift and go to state 32
    LPAREN          shift and go to state 13

    factor                         shift and go to state 47

state 29

    (25) factor -> MINUS INT .

    POWER           reduce using rule 25 (factor -> MINUS INT .)
    TIMES           reduce using rule 25 (factor -> MINUS INT .)
    DIVIDE          reduce using rule 25 (factor -> MINUS INT .)
    NEWLINE         reduce using rule 25 (factor -> MINUS INT .)
    PLUS            reduce using rule 25 (factor -> MINUS INT .)
    MINUS           reduce using rule 25 (factor -> MINUS INT .)
    AND             reduce using rule 25 (factor -> MINUS INT .)
    OR              reduce using rule 25 (factor -> MINUS INT .)
    EQT             reduce using rule 25 (factor -> MINUS INT .)
    NEQ             reduce using rule 25 (factor -> MINUS INT .)
    LT              reduce using rule 25 (factor -> MINUS INT .)
    GT              reduce using rule 25 (factor -> MINUS INT .)
    ELT             reduce using rule 25 (factor -> MINUS INT .)
    EGT             reduce using rule 25 (factor -> MINUS INT .)
    $end            reduce using rule 25 (factor -> MINUS INT .)
    RPAREN          reduce using rule 25 (factor -> MINUS INT .)


state 30

    (26) factor -> MINUS FLOAT .

    POWER           reduce using rule 26 (factor -> MINUS FLOAT .)
    TIMES           reduce using rule 26 (factor -> MINUS FLOAT .)
    DIVIDE          reduce using rule 26 (factor -> MINUS FLOAT .)
    NEWLINE         reduce using rule 26 (factor -> MINUS FLOAT .)
    PLUS            reduce using rule 26 (factor -> MINUS FLOAT .)
    MINUS           reduce using rule 26 (factor -> MINUS FLOAT .)
    AND             reduce using rule 26 (factor -> MINUS FLOAT .)
    OR              reduce using rule 26 (factor -> MINUS FLOAT .)
    EQT             reduce using rule 26 (factor -> MINUS FLOAT .)
    NEQ             reduce using rule 26 (factor -> MINUS FLOAT .)
    LT              reduce using rule 26 (factor -> MINUS FLOAT .)
    GT              reduce using rule 26 (factor -> MINUS FLOAT .)
    ELT             reduce using rule 26 (factor -> MINUS FLOAT .)
    EGT             reduce using rule 26 (factor -> MINUS FLOAT .)
    $end            reduce using rule 26 (factor -> MINUS FLOAT .)
    RPAREN          reduce using rule 26 (factor -> MINUS FLOAT .)


state 31

    (10) expression -> NOT expression .
    (6) expression -> expression . PLUS term
    (7) expression -> expression . MINUS term
    (11) expression -> expression . AND expression
    (12) expression -> expression . OR expression
    (13) expression -> expression . EQT expression
    (14) expression -> expression . NEQ expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GT expression
    (17) expression -> expression . ELT expression
    (18) expression -> expression . EGT expression

    NEWLINE         reduce using rule 10 (expression -> NOT expression .)
    AND             reduce using rule 10 (expression -> NOT expression .)
    OR              reduce using rule 10 (expression -> NOT expression .)
    $end            reduce using rule 10 (expression -> NOT expression .)
    RPAREN          reduce using rule 10 (expression -> NOT expression .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    EQT             shift and go to state 20
    NEQ             shift and go to state 21
    LT              shift and go to state 22
    GT              shift and go to state 23
    ELT             shift and go to state 24
    EGT             shift and go to state 25

  ! PLUS            [ reduce using rule 10 (expression -> NOT expression .) ]
  ! MINUS           [ reduce using rule 10 (expression -> NOT expression .) ]
  ! EQT             [ reduce using rule 10 (expression -> NOT expression .) ]
  ! NEQ             [ reduce using rule 10 (expression -> NOT expression .) ]
  ! LT              [ reduce using rule 10 (expression -> NOT expression .) ]
  ! GT              [ reduce using rule 10 (expression -> NOT expression .) ]
  ! ELT             [ reduce using rule 10 (expression -> NOT expression .) ]
  ! EGT             [ reduce using rule 10 (expression -> NOT expression .) ]
  ! AND             [ shift and go to state 18 ]
  ! OR              [ shift and go to state 19 ]


state 32

    (28) factor -> NEWLINE . IDENTIFIER

    IDENTIFIER      shift and go to state 26


state 33

    (22) factor -> factor POWER . factor
    (22) factor -> . factor POWER factor
    (23) factor -> . INT
    (24) factor -> . FLOAT
    (25) factor -> . MINUS INT
    (26) factor -> . MINUS FLOAT
    (27) factor -> . IDENTIFIER
    (28) factor -> . NEWLINE IDENTIFIER
    (29) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 7
    IDENTIFIER      shift and go to state 3
    NEWLINE         shift and go to state 32
    LPAREN          shift and go to state 13

    factor                         shift and go to state 48

state 34

    (29) factor -> LPAREN expression . RPAREN
    (6) expression -> expression . PLUS term
    (7) expression -> expression . MINUS term
    (11) expression -> expression . AND expression
    (12) expression -> expression . OR expression
    (13) expression -> expression . EQT expression
    (14) expression -> expression . NEQ expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GT expression
    (17) expression -> expression . ELT expression
    (18) expression -> expression . EGT expression
